fix wrap text

--- a/src/styles/_material-form.scss
+++ b/src/styles/_material-form.scss
@@ -5,6 +5,7 @@
   width: 100%;
   min-height: 1.2em;
   max-width: 400px;
+  white-space: normal;
 
 
   input:not([type="checkbox"]),
